Kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: todo-ingress
  namespace: todo-app

spec:
  ingressClassName: nginx

  rules:

  - http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: react-client

            port:
              number: 80

      - path: /auth
        pathType: Prefix

        backend:
          service:
            name: api-gateway

            port:
              number: 8080

      - path: /todos
        pathType: Prefix

        backend:
          service:
            name: api-gateway

            port:
              number: 8080
